--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300&amp;subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300&subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-    <form class="todo">
-        <input name="task" type="text" placeholder="Type text to add note">
-    </form>
-</header>
-<main>
-    <ul></ul>
-</main>
-<script src="app.js"></script>
+    <header>
+        <form class="todo">
+            <input name="task" type="text" placeholder="Type text to add note">
+        </form>
+    </header>
+    <main>
+        <ul></ul>
+    </main>
+    <script src="app.js"></script>
 </body>
 </html>
